fixed issues with footer covering content on site

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,7 @@
+body {
+    padding-bottom: 100px;
+}
+
 $primary: #606C5D;
 $light: #fffefd;
 
